# nemo

./: CMakeLists.txt  README.md
include/: buffer.h  color.h  file.h  file.ipp  global.h  nemo.h  term.h  utils.h
src/: CMakeLists.txt  file.cpp  main.cpp  nemo.cpp  term.cpp  utils.cpp
src/unix/: color.cpp  term.cpp  utils.cpp
src/windows/: buffer.cpp  color.cpp  term.cpp  utils.cpp
